@@ -128,9 +128,3 @@ En draw window contents solo renderiza si se ha modificado o bien la capa de tex
 
 -Opción zx visión para tener una ventana siempre encima
 
-
-int zxvision_coords_in_superior_windows(zxvision_window *w,int x,int y)
-{
- //esto estaria mal:
-
-	if (zxvision_current_window==w) return 0;
